First Project Uploaded

--- a/about.html
+++ b/about.html
@@ -183,13 +183,14 @@ $(document).ready(function () {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>
-  <a href="flex_dashboard.html">Visuals</a>
-</li>
+        
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="http://dw.convertfiles.com/files/0020021001541176280/jacky%20choi%20-%20updated%20resume.html">Resume</a>
+  <a href="projects.html">NHANES Data Analysis</a>
+</li>
+<li>
+  <a href="resume.html">Resume</a>
 </li>
 <li>
   <a href="mailto:&lt;jmc2392@cumc.columbia.edu&gt;">
