--- a/resume.html
+++ b/resume.html
@@ -217,6 +217,7 @@ $(document).ready(function () {
 </div>
 
 
+<p><br></p>
 <style>
 .list-group-item.active, .list-group-item.active:focus, .list-group-item.active:hover {
     background-color: #337ab7;
@@ -241,37 +242,7 @@ font-weight: bold;
 }
 
 </style>
-<p><br></p>
-<div id="jacky-choi-mphc" class="section level2">
-<h2>Jacky Choi, MPHc</h2>
-<p><link rel="stylesheet" href="styles.css" type="text/css"> <link rel="stylesheet" href="academicons/css/academicons.min.css"/> <link rel="apple-touch-icon" href="/images/jacky.jpg" ></p>
-<p>MPH Graduate Student <br> <a href="https://www.mailman.columbia.edu/become-student/departments/epidemiology">Department of Epidemiology</a> <br> Columbia University Mailman School of Public Health</p>
-<p><br><img src="images/jacky.jpg" alt="jacky" style="width:35%; border:10px solid"></p>
-<p><br></p>
-<div id="about-me" class="section level4">
-<h4>About Me</h4>
-<p>I am currently a second-year graduate student in the Department of Epidemiology at the Mailman School of Public Health at Columbia University pursuing an Applied Biostatistics certificate. My academic coursework has been geared heavily toward foundational biostatistical skills using various statistical programs and languages, while my experience has involved working with various aspects of data (including data acquisition, cleaning, management, analysis, and reporting) in relation to health research. Taken together, I believe I am a formidable candidate for data scientist, analyst, and biostatistician positions. I am currently seeking these positions, or any that sufficiently develops my analytic mindset, programming/coding capability, biostatistical skills, and/or knowledge of research methods.</p>
-<p><br></p>
-</div>
-<div id="website" class="section level4">
-<h4>Website</h4>
-<p>I built this website using R and GitHub so that I could showcase some of the projects that I have worked on over the past couple of years. I tried incorporating projects that showcase my various competencies, including:</p>
-<ul>
-<li>Usage of various statistical programs and/or languages (e.g., SQL, R, SAS)</li>
-<li>Ability to write scientific or research papers</li>
-<li>Understanding of how to clean, manipulate, and analyze data</li>
-<li>Knowledge of how to apply various regression techniques and models (e.g., linear, logistic)</li>
-</ul>
-<p>Please take the time to glance at some of the projects on this website!</p>
-<p>To view my resume, you can click <a href="resume.html">here</a>.</p>
-<p><br></p>
-</div>
-<div id="contact-information" class="section level4">
-<h4>Contact Information</h4>
-<p>Jacky Choi Primary Email: <a href="mailto:jmc2392@cumc.columbia.edu">jmc2392@cumc.columbia.edu</a><br />
-Alternate Email: <a href="mailto:jmc525@cornell.edu">jmc525@cornell.edu</a> <br> Phone: 917-216-1621</p>
-</div>
-</div>
+<p><br> <img src="images/resume.JPG" alt="Resume" style="width:100%; border:1px solid"></p>
 
 
 
