--- a/projects3.html
+++ b/projects3.html
@@ -11,8 +11,9 @@
 
 <meta name="author" content="Jacky Choi" />
 
+<meta name="date" content="2019-03-15" />
 
-<title>jmc2392_hw4</title>
+<title>projects3</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -217,14 +218,191 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">jmc2392_hw4</h1>
+<h1 class="title toc-ignore">projects3</h1>
 <h4 class="author"><em>Jacky Choi</em></h4>
-<h4 class="date"><em>November 2, 2018</em></h4>
+<h4 class="date"><em>March 15, 2019</em></h4>
 
 </div>
 
 
+<p>Note: Weights above are arbitrarily assigned such that each category is equally weighted. Depending on team’s preferences, weights for each category should be adjusted. You can formally determine the weight/preference of each category using the following steps:</p>
+<ol style="list-style-type: decimal">
+<li>Survey the team and examine what they believe should be the most important factors in determining whether a data request should be prioritized first.</li>
+</ol>
+<p>Example Survey Question: What should be the most important factors in determining whether a data request should be prioritized first? Order each factor below, with 1 being the most important factor, 2 being somewhat important, 3 being neither important nor unimportant, 4 being somewhat unimportant, and 5 being the least important factor.</p>
+<p>Example Respondent Answers: Factor Rating Length of time data request has been in queue 2 Who is making the data request 3 Extent and ease of completing the data request 1 Amount of time given to complete the data request (i.e., turnaround time) 4 Overall importance of data request 5</p>
+<ol start="2" style="list-style-type: decimal">
+<li>Input response options from ALL respondents into an Excel, CSV, or SAS file.</li>
+</ol>
+<p>In the table containing hypothetical data shown below: • Obs is an ID for each row • Rating contains the response rating given by each respondent, from 1 to 5 • Factor lists the factor being considered above • Count gives the frequency that each factor received for each rating</p>
+<pre class="r"><code>library(knitr)
 
+mystring&lt;-
+(&quot;obs,factor,rating,count 
+1,Time,1,22
+2,Time,2,20
+3,Time,3,18
+4,Time,4,16
+5,Time,5,14
+6,Requestor,1,6
+7,Requestor,2,15
+8,Requestor,3,20
+9,Requestor,4,23
+10,Requestor,5,26
+11,Extent,1,20
+12,Extent,2,22
+13,Extent,3,20
+14,Extent,4,14
+15,Extent,5,14
+16,Turnaround,1,13
+17,Turnaround,2,17
+18,Turnaround,3,28
+19,Turnaround,4,18
+20,Turnaround,5,14
+21,Importance,1,16
+22,Importance,2,18
+23,Importance,3,22
+24,Importance,4,19
+25,Importance,5,15&quot;)
+
+mydata &lt;- read.table(textConnection(mystring), header=TRUE, sep=&quot;,&quot;, row.names=&quot;obs&quot;)
+kable(mydata)</code></pre>
+<table>
+<thead>
+<tr class="header">
+<th align="left">factor</th>
+<th align="right">rating</th>
+<th align="right">count</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">Time</td>
+<td align="right">1</td>
+<td align="right">22</td>
+</tr>
+<tr class="even">
+<td align="left">Time</td>
+<td align="right">2</td>
+<td align="right">20</td>
+</tr>
+<tr class="odd">
+<td align="left">Time</td>
+<td align="right">3</td>
+<td align="right">18</td>
+</tr>
+<tr class="even">
+<td align="left">Time</td>
+<td align="right">4</td>
+<td align="right">16</td>
+</tr>
+<tr class="odd">
+<td align="left">Time</td>
+<td align="right">5</td>
+<td align="right">14</td>
+</tr>
+<tr class="even">
+<td align="left">Requestor</td>
+<td align="right">1</td>
+<td align="right">6</td>
+</tr>
+<tr class="odd">
+<td align="left">Requestor</td>
+<td align="right">2</td>
+<td align="right">15</td>
+</tr>
+<tr class="even">
+<td align="left">Requestor</td>
+<td align="right">3</td>
+<td align="right">20</td>
+</tr>
+<tr class="odd">
+<td align="left">Requestor</td>
+<td align="right">4</td>
+<td align="right">23</td>
+</tr>
+<tr class="even">
+<td align="left">Requestor</td>
+<td align="right">5</td>
+<td align="right">26</td>
+</tr>
+<tr class="odd">
+<td align="left">Extent</td>
+<td align="right">1</td>
+<td align="right">20</td>
+</tr>
+<tr class="even">
+<td align="left">Extent</td>
+<td align="right">2</td>
+<td align="right">22</td>
+</tr>
+<tr class="odd">
+<td align="left">Extent</td>
+<td align="right">3</td>
+<td align="right">20</td>
+</tr>
+<tr class="even">
+<td align="left">Extent</td>
+<td align="right">4</td>
+<td align="right">14</td>
+</tr>
+<tr class="odd">
+<td align="left">Extent</td>
+<td align="right">5</td>
+<td align="right">14</td>
+</tr>
+<tr class="even">
+<td align="left">Turnaround</td>
+<td align="right">1</td>
+<td align="right">13</td>
+</tr>
+<tr class="odd">
+<td align="left">Turnaround</td>
+<td align="right">2</td>
+<td align="right">17</td>
+</tr>
+<tr class="even">
+<td align="left">Turnaround</td>
+<td align="right">3</td>
+<td align="right">28</td>
+</tr>
+<tr class="odd">
+<td align="left">Turnaround</td>
+<td align="right">4</td>
+<td align="right">18</td>
+</tr>
+<tr class="even">
+<td align="left">Turnaround</td>
+<td align="right">5</td>
+<td align="right">14</td>
+</tr>
+<tr class="odd">
+<td align="left">Importance</td>
+<td align="right">1</td>
+<td align="right">16</td>
+</tr>
+<tr class="even">
+<td align="left">Importance</td>
+<td align="right">2</td>
+<td align="right">18</td>
+</tr>
+<tr class="odd">
+<td align="left">Importance</td>
+<td align="right">3</td>
+<td align="right">22</td>
+</tr>
+<tr class="even">
+<td align="left">Importance</td>
+<td align="right">4</td>
+<td align="right">19</td>
+</tr>
+<tr class="odd">
+<td align="left">Importance</td>
+<td align="right">5</td>
+<td align="right">15</td>
+</tr>
+</tbody>
+</table>
 
 
 
