--- a/resume.html
+++ b/resume.html
@@ -187,7 +187,10 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="projects.html">NHANES Data Analysis</a>
+  <a href="projects2.html">NHANES Data Analysis</a>
+</li>
+<li>
+  <a href="projects.html">NHANES Data Analysis 2</a>
 </li>
 <li>
   <a href="resume.html">Resume</a>
