--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ font-weight: bold;
 </div>
 <div id="website" class="section level4">
 <h4>Website</h4>
-<p>I built this website using R and GitHub so that I could showcase some of the projects that I have worked on over the past couple of years. I tried incorporating projects that showcase my various competencies, including:</p>
+<p><strong>I built this website using R and GitHub (with a bit of CSS and HTML) so that I could showcase some of the projects that I have worked on over the past couple of years.</strong> I tried incorporating projects that showcase my various competencies, including:</p>
 <ul>
 <li>Usage of various statistical programs and/or languages (e.g., SQL, R, SAS)</li>
 <li>Ability to write scientific or research papers</li>
@@ -297,7 +297,7 @@ font-weight: bold;
 </div>
 <div id="contact-information" class="section level4">
 <h4>Contact Information</h4>
-<p>Jacky Choi Primary Email: <a href="mailto:jmc2392@cumc.columbia.edu">jmc2392@cumc.columbia.edu</a><br />
+<p>Jacky Choi <br> Primary Email: <a href="mailto:jmc2392@cumc.columbia.edu">jmc2392@cumc.columbia.edu</a><br />
 Alternate Email: <a href="mailto:jmc525@cornell.edu">jmc525@cornell.edu</a> <br> Phone: 917-216-1621</p>
 </div>
 </div>
