--- a/projects3.html
+++ b/projects3.html
@@ -592,7 +592,8 @@ font-weight: bold;
 <div id="results---r" class="section level3">
 <h3>Results - R</h3>
 <p>We run the same model in R. The R code and output for the model is provided below.</p>
-<pre class="r"><code>library(plotly)</code></pre>
+<pre class="r"><code>library(knitr)
+library(plotly)</code></pre>
 <pre><code>## Loading required package: ggplot2</code></pre>
 <pre><code>## 
 ## Attaching package: &#39;plotly&#39;</code></pre>
