--- a/ordinalmodel.html
+++ b/ordinalmodel.html
@@ -313,7 +313,7 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="projects3.html">Analyzing Likert Scale of Depressive Symptoms</a>
+      <a href="ordinalmodel.html">Analyzing Likert Scale of Depressive Symptoms</a>
     </li>
   </ul>
 </li>
@@ -749,7 +749,7 @@ plot = total4 %&gt;%
 
 plot</code></pre>
 <pre><code>## `geom_smooth()` using method = &#39;loess&#39; and formula &#39;y ~ x&#39;</code></pre>
-<p><img src="projects3_files/figure-html/create_factors-1.png" width="672" /></p>
+<p><img src="ordinalmodel_files/figure-html/create_factors-1.png" width="672" /></p>
 </div>
 </div>
 
