new projects3 again

--- a/README.html
+++ b/README.html
@@ -206,7 +206,7 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="projects3.html">Analyzing Likert Scale of Depressive Symptoms</a>
+      <a href="ordinalmodel.html">Analyzing Likert Scale of Depressive Symptoms</a>
     </li>
   </ul>
 </li>
