--- a/NHANES1.html
+++ b/NHANES1.html
@@ -313,7 +313,7 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="projects3.html">Analyzing Likert Scale of Depressive Symptoms</a>
+      <a href="ordinalmodel.html">Analyzing Likert Scale of Depressive Symptoms</a>
     </li>
   </ul>
 </li>
