--- a/ordinalmodel.html
+++ b/ordinalmodel.html
@@ -391,41 +391,39 @@ font-weight: bold;
 <div id="packages" class="section level3">
 <h3>Packages</h3>
 <pre class="r"><code>library(knitr)
-library(plotly)
-library(ggplot2)
+library(plotly)</code></pre>
+<pre><code>## Loading required package: ggplot2</code></pre>
+<pre><code>## 
+## Attaching package: &#39;plotly&#39;</code></pre>
+<pre><code>## The following object is masked from &#39;package:ggplot2&#39;:
+## 
+##     last_plot</code></pre>
+<pre><code>## The following object is masked from &#39;package:stats&#39;:
+## 
+##     filter</code></pre>
+<pre><code>## The following object is masked from &#39;package:graphics&#39;:
+## 
+##     layout</code></pre>
+<pre class="r"><code>library(ggplot2)
 library(MASS)</code></pre>
 <pre><code>## 
 ## Attaching package: &#39;MASS&#39;</code></pre>
 <pre><code>## The following object is masked from &#39;package:plotly&#39;:
 ## 
 ##     select</code></pre>
-<pre><code>## The following object is masked from &#39;package:dplyr&#39;:
-## 
-##     select</code></pre>
 <pre class="r"><code>library(plyr)</code></pre>
-<pre><code>## -------------------------------------------------------------------------</code></pre>
-<pre><code>## You have loaded plyr after dplyr - this is likely to cause problems.
-## If you need functions from both plyr and dplyr, please load plyr first, then dplyr:
-## library(plyr); library(dplyr)</code></pre>
-<pre><code>## -------------------------------------------------------------------------</code></pre>
 <pre><code>## 
 ## Attaching package: &#39;plyr&#39;</code></pre>
 <pre><code>## The following objects are masked from &#39;package:plotly&#39;:
 ## 
 ##     arrange, mutate, rename, summarise</code></pre>
-<pre><code>## The following objects are masked from &#39;package:dplyr&#39;:
-## 
-##     arrange, count, desc, failwith, id, mutate, rename, summarise,
-##     summarize</code></pre>
-<pre><code>## The following object is masked from &#39;package:purrr&#39;:
-## 
-##     compact</code></pre>
 <p><br></p>
 </div>
 <div id="background" class="section level3">
 <h3>Background</h3>
 <p>At the beginning of the Work-Focused Intervention for Depression (WFID) trial, a baseline survey containing questions about respondents’ level and frequency of various moods was administered. Researchers gathered responses from 90 individuals in the experimental group and now want to determine the ranking of their responses for one survey question that used a Likert scale - specifically, they want to know whether respondents experienced certain depressive symptoms more often than others. Figure 1 displays the survey question being analyzed and Figure 2 displays a sample respondent answer.</p>
-<p>Figure 1: Frequency of Various Moods Survey Question <br> <img src = "images2/depressed.jpg" alt="depressed1" style="width:75%; border:1px solid"></p>
+<p>Figure 1: Frequency of Various Moods Survey Question <br> <img src = "images2/depressed.jpg" alt="depressed11" style="width:75%; border:1px solid"></p>
+<p>Figure 1: Frequency of Various Moods Survey Question <br> <img src = "depressed.jpg" alt="depressed10" style="width:75%; border:1px solid"></p>
 <p><br></p>
 <p><img src="images2/depressed.jpg" width="75%" style="background-color: #000000; padding:1px; display: inline-block;" /></p>
 <p><br></p>
