--- a/about.html
+++ b/about.html
@@ -211,6 +211,9 @@ $(document).ready(function () {
     <li>
       <a href="ordinalmodel.html">Analyzing Likert Scale of Depressive Symptoms</a>
     </li>
+    <li>
+      <a href="test.html">test</a>
+    </li>
   </ul>
 </li>
 <li>
