--- a/NHANES2.html
+++ b/NHANES2.html
@@ -315,6 +315,9 @@ div.tocify {
     <li>
       <a href="ordinalmodel.html">Analyzing Likert Scale of Depressive Symptoms</a>
     </li>
+    <li>
+      <a href="test.html">test</a>
+    </li>
   </ul>
 </li>
 <li>
