--- a/README.html
+++ b/README.html
@@ -208,6 +208,9 @@ $(document).ready(function () {
     <li>
       <a href="ordinalmodel.html">Analyzing Likert Scale of Depressive Symptoms</a>
     </li>
+    <li>
+      <a href="test.html">test</a>
+    </li>
   </ul>
 </li>
 <li>
