--- a/test.html
+++ b/test.html
@@ -396,7 +396,7 @@ font-weight: bold;
 <h3>Background</h3>
 <p>     Obesity - one of the most complex public health issue facing our country today - in the United States reached 39.8% for the adult population in 2015-2016; it is associated with an increased risk for reduced quality of life and is a precursor to many other serious health conditions. It results from a combination of factors, including individual behavior - specifically, dietary behavior and patterns have been noted as important predictors of obesity. Indeed, it has been reported that Americans’ food consumption has shifted to incorporate more food prepared outside the home, becoming close to one-third of an individual’s daily dietary intake. At the same time, nutritional quality in diets has decreased while overall calorie counts have increased. As American adults eat more meals prepared away from home, researchers have suggested that poor diet may partly be a culprit for this epidemic.</p>
 <p>Figure 1: Distribution of DBD895 <br> <img src="images/figure1.jpg" alt="1" style="width:50%; border:1px solid"></p>
-<p>Figure 2: Frequency of Various Moods Survey Question <br> <img src="images2/depressed2.jpg" alt="dep2" style="width:50%; border:1px solid"></p>
+<p>Figure 2: Frequency of Various Moods Survey Question <img src="images2/test.JPG" alt="dep2" style="width:50%; border:1px solid"></p>
 </div>
 </div>
 
